# coding-agent-acceptance-lab

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  check-opencode.sh  north_mini_analysis.md  opencode.json  presentation.html  pyproject.toml
app/: dates.py
challenges/: README.md
ci_vibe_lab/: __init__.py  analysis.py  dashboard.py  db.py  evaluator.py  generate_evaluator_report.py  generate_gallery.py  integrity.py  matrix.py  report.py  runner.py  scenarios.py
docs/: README.md  architecture.md  benchmark-quality-hardening-plan-2026-06-20.md  challenge-design.md  contributing.md  data-dictionary.md  handover-session-2026-06-21.md  local-ollama-opponents.md  matrix-cell-recovery.md  matrix-retry-runtime-failures-proposal-2026-06-21.md  methodology.md  model-comparison-eval-pipeline-plan-2026-06-20.md  public-release-model.md  repository-map.md  repository-rename-checklist.md  running-experiments.md  scenario-arsenal-reference.md  ultimate-harness-audit-fresh-run-plan-2026-06-20.md
presentation/: architecture.html  ci-harness-2.html  ci-harness-3.html  ci-harness-4.html  embed.html  harness-v5-promote-like-crazy-yet-honest-spaceguy-sex.md  harness-v5.html  linkedin-post-v2.md  linkedin-post-v3.md  linkedin-post-v4.md  linkedin-post-v5.md  linkedin-post.md  north-mini-post-v2.md  north-mini-test-architecture.html  north-mini-test-deck.html  north-mini-test-eval-flow.html  north-mini-test-flow.html  north-mini-test-presentation.html  north-mini-test.html  v10.html  v11.html  v6.html  v7.html  v8.html  v9.html
publishables/: PUBLISHABLES_PLAN.md  (+11 more)
(+123 files in other folders)
