[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-acceptance-lab"
version = "0.1.0"
description = "Local OpenCode vibe eval harness for small CI-forensics coding-agent tasks."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
app = [
  "pandas>=2.2",
  "streamlit>=1.36",
]

[project.scripts]
ci-vibe-run = "ci_vibe_lab.runner:main"
ci-vibe-matrix = "ci_vibe_lab.matrix:main"
ci-vibe-report = "ci_vibe_lab.report:main"
ci-vibe-evaluate = "ci_vibe_lab.evaluator:main"

[tool.setuptools.packages.find]
include = ["ci_vibe_lab*"]
